--- a/FlickrAlbum/Base.lproj/Main.storyboard
+++ b/FlickrAlbum/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0td-ri-245">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Mp2-ye-sia">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <!--AlbumVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="AlbumVC" customModule="FlickrAlbum" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="albumVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="AlbumVC" customModule="FlickrAlbum" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -93,12 +93,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1044" y="127.28635682158921"/>
+            <point key="canvasLocation" x="1983.2" y="127.28635682158921"/>
         </scene>
         <!--Detail ImageVC-->
         <scene sceneID="Vdf-Zh-AwV">
             <objects>
-                <viewController storyboardIdentifier="detailImage" id="glx-PT-nB6" customClass="DetailImageVC" customModule="FlickrAlbum" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="detailImage" useStoryboardIdentifierAsRestorationIdentifier="YES" id="glx-PT-nB6" customClass="DetailImageVC" customModule="FlickrAlbum" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="isj-HS-6kD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -122,25 +122,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WlC-Lh-kdm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1802" y="131"/>
+            <point key="canvasLocation" x="2740" y="130.88455772113943"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="4Hy-P3-n1v">
+        <scene sceneID="AL0-Qs-EYQ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0td-ri-245" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Mp2-ye-sia" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NHo-30-xrq">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sRe-LP-hw8">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="IIv-TZ-N8j"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="GL6-vI-Xrx"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cH3-1Y-X40" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ebs-Pj-xWj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="104.8" y="127.28635682158921"/>
+            <point key="canvasLocation" x="1044" y="127.28635682158921"/>
         </scene>
     </scenes>
 </document>
